# pico-ice-spi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
